--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "theme_color": "#000000",
   "background_color": "#000000",
   "display": "standalone",
-  "start_url": "/index.html",
+  "start_url": "/TravelCosts/index.html",
   "icons": [
     { "src": "img/icon-128x128.png",
       "sizes": "128x128",
